# vllm

./: README.md  pyproject.toml  setup.py
docs/: README.md
docs/cli/: serve.md
docs/contributing/: README.md
docs/design/: rust_router_architecture.md
docs/getting_started/: quickstart.md
docs/serving/: openai_compatible_server.md
tools/pre_commit/: check_forbidden_imports.py
vllm-router/: Cargo.toml
vllm-router/src/: lib.rs  main.rs
vllm/entrypoints/cli/: main.py  serve.py
vllm/entrypoints/openai/: cli_args.py
