[package]
name = "vllm-router"
version = "0.1.0"
edition = "2021"

[lib]
name = "vllm_router"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "vllm-router"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-prometheus = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.21", features = ["auto-initialize", "serde"] }
futures = "0.3"
zeromq = "0.4"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
rmp-serde = "1.3"
dashmap = "6.0"
async-stream = "0.3"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.21"
